POST working on txt file